# ArXiv_AcceleratorPhysics

./: .gitignore  .gitlab-ci-simple.yml  .gitlab-ci.yml  .pre-commit-config.yaml  API_SETUP_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEDUPLICATION_TEST.md  DEPLOYMENT_CHECKLIST.md  LICENSE  MANIFEST.in  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  USAGE.md  VERSION_UPDATE_v1.1.0.md  WEB_COMPLETION_REPORT.md  final_check.py  health_check.py  init_project.py  project_stats.py  push_to_gitlab.bat  push_to_gitlab.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.bat  start.sh  start_web.bat  start_web.py  test_api.py  test_web.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  daily_arxiv_analysis.yml  deploy-web-demo.yml
config/: settings.yaml
data/: README.md
data/analysis/2025-07-25/: 2502.10740v3_analysis.json  2507.18226v1_analysis.json  2507.18310v1_analysis.json  analysis_results.json  daily_summary.md  unknown_analysis.json
data/analysis/2025-07-29/: 2507.20493v1_analysis.json  2507.20691v1_analysis.json  2507.20895v1_analysis.json  analysis_results.json  daily_summary.md
data/analysis/2025-07-30/: 2111.15555v5_analysis.json  2409.07015v4_analysis.json  2412.14962v2_analysis.json  2412.15823v2_analysis.json  2502.08498v2_analysis.json  2502.12044v2_analysis.json  2502.17386v2_analysis.json  2503.05674v5_analysis.json  2503.17189v3_analysis.json  2505.00288v4_analysis.json  2505.10353v3_analysis.json  2505.10669v3_analysis.json  2505.22097v2_analysis.json  2505.24682v2_analysis.json  2506.05553v2_analysis.json  2506.16368v2_analysis.json  2507.18497v2_analysis.json  2507.18948v1_analysis.json  2507.19044v1_analysis.json  2507.19248v1_analysis.json  2507.19311v1_analysis.json  2507.19319v1_analysis.json  2507.19337v1_analysis.json  2507.19352v1_analysis.json  2507.19393v1_analysis.json  2507.19425v1_analysis.json  2507.19436v2_analysis.json  2507.19668v1_analysis.json  2507.19729v1_analysis.json  2507.20242v1_analysis.json  2507.20244v1_analysis.json  2507.20248v1_analysis.json  2507.20413v1_analysis.json  2507.20493v1_analysis.json  2507.20523v1_analysis.json  2507.20626v1_analysis.json  2507.20663v1_analysis.json  2507.20691v1_analysis.json  2507.20748v1_analysis.json  2507.20756v1_analysis.json  (+12 more)
data/analysis/2025-07-31/: 2111.15555v5_analysis.json  2406.02837v2_analysis.json  2412.15823v2_analysis.json  2502.01006v3_analysis.json  2502.01542v2_analysis.json  2502.08498v2_analysis.json  2502.16392v4_analysis.json  2503.05674v5_analysis.json  2503.17189v3_analysis.json  2505.06476v2_analysis.json  2505.10353v3_analysis.json  2505.10669v3_analysis.json  2506.05553v2_analysis.json  2506.16368v2_analysis.json  2506.16676v4_analysis.json  2507.11755v2_analysis.json  2507.19436v2_analysis.json  2507.20242v1_analysis.json  2507.20244v1_analysis.json  2507.20248v1_analysis.json  2507.20413v1_analysis.json  2507.20493v1_analysis.json  2507.20523v1_analysis.json  2507.20626v1_analysis.json  2507.20663v1_analysis.json  2507.20691v1_analysis.json  2507.20748v1_analysis.json  2507.20756v1_analysis.json  2507.20771v1_analysis.json  2507.20895v1_analysis.json  2507.20948v1_analysis.json  2507.21003v1_analysis.json  2507.21052v1_analysis.json  2507.21365v1_analysis.json  2507.21525v1_analysis.json  2507.21612v1_analysis.json  2507.21657v1_analysis.json  2507.22055v1_analysis.json  2507.22145v1_analysis.json  2507.22175v1_analysis.json  (+12 more)
data/analysis/2025-08-01/: 2111.15555v5_analysis.json  2312.07957v3_analysis.json  2406.02837v2_analysis.json  2410.18155v7_analysis.json  2412.15823v2_analysis.json  2501.01524v2_analysis.json  2502.01006v3_analysis.json  2502.01542v2_analysis.json  2502.08498v2_analysis.json  2502.16392v4_analysis.json  2502.17280v3_analysis.json  2503.05674v5_analysis.json  2503.17189v3_analysis.json  2505.06476v2_analysis.json  2505.10353v3_analysis.json  2506.05553v2_analysis.json  2506.16676v4_analysis.json  2507.11755v2_analysis.json  2507.13907v2_analysis.json  2507.18672v2_analysis.json  2507.19436v2_analysis.json  2507.20663v1_analysis.json  2507.20691v1_analysis.json  2507.20748v1_analysis.json  2507.20756v1_analysis.json  2507.20771v1_analysis.json  2507.20895v1_analysis.json  2507.20948v1_analysis.json  2507.21003v1_analysis.json  2507.21052v1_analysis.json  2507.21365v1_analysis.json  2507.21525v1_analysis.json  2507.21612v1_analysis.json  2507.21657v1_analysis.json  2507.22055v1_analysis.json  2507.22145v1_analysis.json  2507.22175v1_analysis.json  2507.22215v1_analysis.json  2507.22225v1_analysis.json  2507.22376v1_analysis.json  (+12 more)
data/statistics/: category_distribution.json  daily_trend.json  overall_stats.json  summary.json
docs/: DEVELOPMENT.md  FAQ.md  GITHUB_PAGES_SETUP.md  GITLAB_CI_SETUP.md  PAGES_SETUP.md  api_reference.rst  conf.py  development.rst  faq.rst  index.rst  installation.rst  usage.rst
docs/SoftwareCopyright/: ArXiv_AcceleratorPhysics.tex
docs/_static/: .gitkeep
src/: __init__.py  arxiv_fetcher.py  data_processor.py  llm_analyzer.py  llm_analyzer_new.py  main.py  utils.py  web_app.py
static/css/: style.css
static/js/: app.js
templates/: analysis_prompt.txt  classification_prompt.txt  keywords_prompt.txt  summary_prompt.txt
templates/web/: analysis.html  base.html  config.html  index.html  paper_detail.html  papers.html  statistics.html
(+23619 files in other folders)
